# django-on-workers

./: .gitignore  README.md  package-lock.json  package.json  patch_django.py  pyproject.toml  wrangler.jsonc  wrangler.toml
src/: .gitignore  asgi.py  wsgi.py
src/app/: settings.py  urls.py
