[project]
name = "django-on-workers"
version = "0.1.0"
description = "This template provides a starting point for running a Django application on Cloudflare Workers, utilizing Cloudflare D1 for serverless SQL database and R2 for media files storage."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "django-cf",
    "django==5.2.6",
    "tzdata",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
